# Autonomy-ROS2

./: .gitignore  README.md  ammon_start_docker.sh  ammon_start_gui.sh  base_launch.sh  cli_setup.sh  compose.sh  copy_id.sh  enter_docker.sh  fisheye_calibration_data.json  launch.sh  launch_dev.sh  reset.sh  setup_ssh.sh  start_mapproxy.sh  sync_git.sh  update.sh  usb_reset.sh  zed_launch.sh
.github/workflows/: autonomy_ros2_docker_image.yml  docker_image.yml  pull_request_template.md  ros1_bridge_docker_image.yml  ros1_bridge_docker_image_arm64.yml
Mega/: Communication.cpp  Communication.h  Globals.h  Handlers.cpp  Handlers.h  Mega.ino  Setup.cpp  Wheels.h
bridge/: compose.sh  run.sh  setup.sh  sync.sh  sync_msgs.sh
bridge/docker/: Dockerfile  docker-compose.yaml
bridge/scripts/: build_bridge.sh  run_bridge.sh  test_bridge.sh
docker/: Dockerfile  docker-compose.yaml
docker/udev/: 10-mars-rover.rules
docs/: Autonomy_Launch_Structure.md
launch_dev/: conversion.sh  launch_dev.sh  ref_ros1.sh
mars_ws/: build_science.sh  launch_base_science.sh  launch_rover_science.sh  super_base_client_configuration_file.xml
mars_ws/domain_bridge/: README.md  example_bridge_config.yaml  mars_bridge_config.yaml  run_bridge.sh
mars_ws/install/: local_setup.sh  setup.sh
mars_ws/log/: latest_build
mars_ws/scripts/: drive_service.py  launch.sh  startup.sh
mars_ws/src/aruco_detect/: CMakeLists.txt  package.xml
mars_ws/src/aruco_detect/cfg/: detector_params.yaml
mars_ws/src/aruco_detect/config/: DetectorParams.yaml
mars_ws/src/aruco_detect/include/: FiducialsNode.h  FiducialsNode.hpp
mars_ws/src/aruco_detect/launch/: aruco_detect.launch  aruco_detect.launch.py
mars_ws/src/aruco_detect/src/: FiducialsNode.cpp  FiducialsNode.h  FiducialsNode.hpp  aruco_detect.cpp
mars_ws/src/aruco_detect/test/: aruco_images_test.cpp  create_markers.py
mars_ws/src/hazard_cpp/: CMakeLists.txt  package.xml
mars_ws/src/hazard_cpp/params/: hazard_params.yaml
mars_ws/src/hazard_cpp/src/: pcl_processor.cpp
mars_ws/src/hazard_detection/: package.xml  setup.cfg  setup.py
mars_ws/src/hazard_detection/hazard_detection/: hazard_avoidance_test.py  hazard_detector.py  pcl_helper.py  rotation_helper.py
mars_ws/src/hazard_detection/hazard_detection/bagged_data/lidar_data_real/: metadata.yaml
mars_ws/src/hazard_detection/hazard_detection/bagged_data/lidar_data_small_object/: metadata.yaml
mars_ws/src/hazard_detection/hazard_detection/bagged_data/lidar_data_two_objects/: metadata.yaml
mars_ws/src/hazard_detection/hazard_detection/sim/: rover_sim.py  rover_sim2.py  test_rover_sim.py  test_rover_sim2.py
mars_ws/src/hazard_detection/params/: hazard_detection.yaml
mars_ws/src/heartbeat/: README.md  package.xml  setup.py
mars_ws/src/heartbeat/heartbeat/: HeartbeatBase.py  HeartbeatRover.py  heartbeat_rover.py
mars_ws/src/heartbeat/launch/: heartbeat_base.launch.launch  heartbeat_base.launch.py  heartbeat_rover_launch.py  test.launch
mars_ws/src/ilove_obama/: CMakeLists.txt  package.xml
mars_ws/src/ilove_obama/include/ilove_obama/: ILoveObama.hpp
mars_ws/src/ilove_obama/src/: ILoveObama.cpp
mars_ws/src/keyboard_autonomy/: package.xml  setup.cfg  setup.py
mars_ws/src/keyboard_autonomy/keyboard_autonomy/: arm_controls.py  buffer_node.py  feat2homography.py  gstreamer2ros2.py  homography2keys.py  keyboard_calibration.py  keyboard_fsm.py  keys2control.py  parameters.py  state_machine_keyboard.py  utils.py
mars_ws/src/keyboard_autonomy/launch/: feat2homography_launch.py  homography2keys_launch.py  keyboard_autonomy_base_launch.py  keyboard_autonomy_launch.py  keyboard_autonomy_rover_launch.py
mars_ws/src/keyboard_autonomy/scripts/: calibrate_for_k_and_d.py  calibration_data.npz  fisheye_calibration_data.json  fisheye_test.py  keyboard_autonomy.sh  keyboard_calibration_data.npz  test_fisheye.py  test_homography.py
mars_ws/src/mobility_cpp/: CMakeLists.txt  package.xml
mars_ws/src/mobility_cpp/launch/: autopilot_drive_launch.py  rover_drive_launch.py  xbox_driver_launch.py
mars_ws/src/mobility_cpp/params/: autopilot_params.yaml
mars_ws/src/mobility_cpp/scripts/: autopilot_manager.py  path_manager.py  wheel_manager.py
mars_ws/src/mobility_cpp/scripts/controllers/: teleop_controllers.py
mars_ws/src/mobility_cpp/src/: mega_comms_node.cpp
mars_ws/tutorial_interfaces/: package.xml
ros1_bridge/: README.md  compose.sh  sync_msgs.sh
ros1_bridge/ros1_msgs_ws/src/rover_msgs/: CMakeLists.txt  package.xml
ros1_bridge/ros1_msgs_ws/src/rover_msgs/msg/: AntennaStatus.msg  Arm.msg  ArmFeedback.msg  ArmHardware.msg  ArmHardwareFeedback.msg  AutonomyTaskInfo.msg  Battery.msg  CameraSetValues.msg  ConnectionInfo.msg  Elevator.msg  FPVServo.msg  Feedback.msg  Gripper.msg  MobilityDriveState.msg  MobilityIWCFeedback.msg  MobilityVelocityCommands.msg  MobilityWaypoint2Follow.msg  NavStatus.msg  PathPlanningWaypoints.msg  RoverState.msg  ScienceSaveNotes.msg  Temperature.msg  Xbox.msg  ZedObstacles.msg
ros1_bridge/ros1_msgs_ws/src/rover_msgs/nonused/: ArmSetPosition.msg  CameraObjectList.msg  CameraValue.msg  Heartbeat.msg  HeartbeatStatusRover.msg  MobilityDriveControl.msg  MobilityDriveSpeedMultiplier.msg  ObstacleInfo.msg  ScienceSensorValues.msg  WallObstacles.msg
ros1_bridge/ros1_msgs_ws/src/rover_msgs/srv/: AutonomyAbort.srv  AutonomyWaypoint.srv  CameraNamesList.srv  DebugMessages.srv  DistHeadingConv.srv  GimbalCommand.srv  GuiCommand.srv  LLToNE.srv  LaunchCamera.srv  PositionReturn.srv  Screenshot.srv  WaypointSend.srv
ros1_bridge/ros2_msgs_ws/src/rover_msgs/: CMakeLists.txt  mapping_rules.yaml  package.xml
ros1_bridge/ros2_msgs_ws/src/rover_msgs/msg/: BatStatGripElevArduino.msg  Heading.msg  KeyboardHomography.msg  MobilityAutopilotCommand.msg  MobilityGPSWaypoint2Follow.msg  MobilityVelocityCommands.msg
ros1_bridge/ros2_msgs_ws/src/rover_msgs/nonused/: NavStatus.msg
ros1_bridge/ros2_msgs_ws/src/rover_msgs/srv/: CameraObjectList.srv
scripts/: base_cli.sh  build.sh  cli_setup.sh  copy_id.sh  entrypoint.sh  launch.sh  rover_cli.sh  zed_launch.sh
(+378 files in other folders)
